<resources>
    <string name="app_name">MeraBillAssignment</string>

    <string name="payments">Payments</string>
    <string name="add_payment"><u>Add Payment</u></string>
    <string name="save">Save</string>
    <string name="amount">₹ Amount</string>
    <string name="provider_icici_citibank_etc">Provider(ICICI, Citibank,etc)</string>
    <string name="transaction_reference">Transaction reference</string>
    <string name="cancel">CANCEL</string>
    <string name="ok">OK</string>
</resources>